# nucleo_h743zi_rust_examples

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: serial_simple_transmit.rs  tri_led_blinking.rs
src/: main.rs
