[package]
name = "nucleo_h743zi_rust_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-itm = "0.4.2"
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
stm32h7xx-hal = {version="0.13.0", features=["stm32h743"]}
nb = "1.0.0"

[package.metadata]
chip = "STM32H743ZITx"